Fix script tag filename case sensitivity

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </audio>
     <div id="hearts"></div>
     <div id="fireworks"></div>
-    <script src="Script.js"></script>
+    <script src="script.js"></script>
+
 </body>
 </html>
